[gd_scene load_steps=11 format=3 uid="uid://dqqlpel4u8gc7"]

[ext_resource type="Script" uid="uid://daqv50jdg2vxl" path="res://Scenes/Equipment/ray_gun.gd" id="1_qcb0x"]
[ext_resource type="Texture2D" uid="uid://m1oppq7yytba" path="res://Assets/Weapons/WEAPONS.png" id="1_tw3un"]
[ext_resource type="Texture2D" uid="uid://ce3dq6uvuhfdx" path="res://Assets/Weapons/RayGunani.png" id="3_kpw3k"]
[ext_resource type="AudioStream" uid="uid://7ibbp41syvcc" path="res://Sounds/ray_gun_sound_effect.wav" id="4_mhmi7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qcb0x"]
size = Vector2(16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhmi7"]
atlas = ExtResource("1_tw3un")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b042x"]
atlas = ExtResource("3_kpw3k")
region = Rect2(255, 56, 51, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_my2cp"]
atlas = ExtResource("3_kpw3k")
region = Rect2(510, 56, 51, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2w2x"]
atlas = ExtResource("3_kpw3k")
region = Rect2(765, 56, 51, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhmi7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhmi7")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b042x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my2cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2w2x")
}],
"loop": true,
"name": &"Shoot",
"speed": 5.0
}]

[node name="RayGun" type="Area2D"]
script = ExtResource("1_qcb0x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(14, -2)
shape = SubResource("RectangleShape2D_qcb0x")

[node name="PivotPoint" type="Marker2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PivotPoint"]
position = Vector2(15, -3)
sprite_frames = SubResource("SpriteFrames_mhmi7")
animation = &"Shoot"

[node name="ShootingPoint" type="Marker2D" parent="PivotPoint/AnimatedSprite2D"]
unique_name_in_owner = true
position = Vector2(7, 1)

[node name="RayBullet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mhmi7")
volume_db = -15.0
